FIX: tries to fix language overlap

--- a/static/style.css
+++ b/static/style.css
@@ -579,6 +579,6 @@ p {
     }
 
     .language{
-        margin: 0;
+        margin-top: 2rem;
     }
 }
